# biometric-processor

./: .dockerignore  .env.docker  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  2025-12-26-perfect-heres-the-exact-prompt-to-give-sonnet.txt  ADDITIONAL_IMPROVEMENTS_ROADMAP.md  ARCHITECTURE.md  AUDIT_2026-04-26.md  BATCH_ENDPOINTS_ARCHITECTURE.md  BATCH_TESTING_GUIDE.md  BIOMETRIC_ACCURACY_ISSUES_REPORT.md  BIOMETRIC_API_TEST_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CODE_QUALITY_AUDIT.md  CODE_REVIEW.md  COMPREHENSIVE_API_TEST_REPORT.md  DEMO_UI_COMPREHENSIVE_AUDIT.md  DEMO_UI_WEBSOCKET_PERFORMANCE_CRITIQUE.md  DEPLOYED_API_TEST_REPORT.md  DESIGN_ANALYSIS_AND_IMPROVEMENTS.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  Dockerfile.gpu  Dockerfile.init  Dockerfile.laptop-gpu  Dockerfile.optimized  FEATURE_DESIGN.md  FRONTEND_FIXES_SUMMARY.md  IMPLEMENTATION_PLAN.md  LIVE_CAMERA_PERFORMANCE_CRITIQUE.md  MANUAL_TESTING_GUIDE.md  MANUAL_TEST_RESULTS.md  MODULE_QUALITY_ASSURANCE_STRATEGY.md  NOTICE  PERFORMANCE_FIXES_SUMMARY.md  (+61 more)
.claude/: settings.local.json
.debug-snapshots/debug-window-20260502-094357/: SNAPSHOT.txt
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  deploy-hetzner.yml  pr-validation.yml
alembic/: env.py
alembic/versions/: 20251212_0001_initial_schema.py  20251217_0002_add_rate_limits_api_keys.py  20260120_0003_add_performance_indexes.py  20260414_0004_client_embedding_observations.py  20260420_0005_add_embedding_ciphertext_columns.py  20260420_0006_backfill_embedding_ciphertext.py  20260420_0007_drop_plaintext_embedding_columns.py  20260502_0005_embedding_ciphertext.py
app/: main.py
app/admin/: __init__.py  api.py  router.py
app/api/: docs.py
app/application/: __init__.py
app/core/: config.py  container.py  gpu.py  gpu_config.py  logging_config.py  validation.py
app/resources/: gesture_shape_templates.json
app/security/: __init__.py  embedding_aad.py  embedding_cipher.py  embedding_match.py  tenant_dek_store.py
app/services/: face_recognition.py  main.py
app/tools/: __init__.py  export_training_data.py  live_liveness_preview.py  test_data_collector.py  train_spoof_classifier.py
app/workers/: __init__.py  celery_app.py  tasks.py
demo/: app.py  pyproject.toml  requirements.txt
demo-ui/: .env.example  .eslintrc.json  .gitignore  FRONTEND_ISSUES_ANALYSIS.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
demo-ui/tests/: setup.ts
demo/assets/: styles.css
demo/components/: __init__.py  base.py  header.py  image_uploader.py  metrics.py  result_display.py  sidebar.py
demo/pages/: 01_Welcome.py  02_Face_Enrollment.py  03_Face_Verification.py  04_Face_Search.py  05_Liveness_Detection.py
demo/tests/: __init__.py  conftest.py
demo/tests/unit/: __init__.py  test_api_client.py  test_config.py  test_container.py  test_exceptions.py  test_image_uploader.py
demo/utils/: __init__.py  api_client.py  config.py  container.py  exceptions.py  protocols.py
deploy/: entrypoint.sh
deploy/laptop-gpu/: .env.laptop  biometric-api.service  cloudflared-config.yml  setup-wsl.sh  setup.sh
docs/: CVE_AUDIT_2026-04-18.md  DEMO_APP_DESIGN.md  DEPLOYMENT_CHALLENGES.md  DETAILED_IMPROVEMENT_DESIGNS.md  ENHANCED_VISUALIZATION.md  IMPROVEMENT_ROADMAP.md  LAPTOP_GPU_RESEARCH.md  MULTI_IMAGE_ENROLLMENT_COMPLETE.md  MULTI_IMAGE_ENROLLMENT_TESTS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  UNIFACE_BACKEND_BENCHMARKING.md
docs/1-getting-started/: DEMO_USAGE.md  QUICK_START.md  QUICK_TEST_GUIDE.md  README.md
docs/2-api-documentation/: API_REFERENCE.md
docs/3-deployment/: DATABASE_FIXES_APPLIED.md  ENABLE_DATABASE.md
docs/5-performance/: DEMO_LOCAL_PERFORMANCE_ANALYSIS.md
docs/6-architecture/: DESIGN_ANALYSIS_AND_IMPROVEMENTS.md  DESIGN_VALIDATION_CHECKLIST.md  MODULE_PLAN.md  PHASE2_DESIGN.md
docs/7-development/: IMPLEMENTATION_PLAN_V2.md  OPTIMIZATION_SESSION_SUMMARY.md
docs/LICENSES/: mediapipe-hand-landmarker.md
docs/api/: API_DOCUMENTATION.md  OPENAPI_SPEC.yaml
docs/archive/: FRONTEND_CODE_REVIEW.md  README.md
docs/design/: BROWSER_BIOMETRIC_ARCHITECTURE.md  PROCTORING_DESIGN_COMPLIANCE_REPORT.md  PROCTORING_PHASE2_DESIGN.md  PROCTORING_PHASE3_DESIGN.md  PROCTORING_SERVICE_DESIGN.md
docs/research/: PROCTORING_SERVICE_RESEARCH.md  SERVER_PROVIDERS_RESEARCH.md
infra/: monitoring-alert-policy.yaml  uptime-check.json
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
migrations/: 003_proctoring_tables.sql
migrations/versions/: 001_create_proctor_tables.sql
monitoring/prometheus/: alerts.yml
scripts/: README_BENCHMARK.md  add_hnsw_indexes.sql  benchmark_live_analysis.py  benchmark_simple.py  calibrate_threshold.py  compare_liveness_backends.py  db-init-job.py  distill_yolov8n.py  docker-build-test.ps1  docker-build-test.sh  download_models.sh  init-database.sql  init-db.sql  patch_librosa_numba.py  setup-database.md  train_yolov8n.py
scripts/db/: init.sql
tests/: TEST_RESULTS_REPORT.md  __init__.py  conftest.py  demo_local.py  test_all_endpoints.py  test_api_simple.py  test_comprehensive.py  test_deployed_api.py  test_live_camera_simple.py  test_proctoring_api.py
tests/benchmarks/: __init__.py  (+1 more)
tests/load/: locustfile.py
(+571 files in other folders)
