[project]
name = "biometric-processor"
version = "1.0.0"
description = "Face biometric processing system with enrollment, verification, and liveness detection"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", "venv", ".venv"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "venv/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pylint.main]
py-version = "3.11"
jobs = 0
ignore = ["tests", "venv", ".venv"]
ignore-patterns = ["test_.*"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring (we have good docstrings, but pylint is strict)
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods (common in domain entities)
    "R0913",  # too-many-arguments (use cases may have many dependencies)
    "W0511",  # fixme (we use TODO comments intentionally)
    "E1101",  # no-member (false positives with numpy/cv2)
]
dependencies = [
    "fastapi",
    "uvicorn",
    "ultralytics>=8.3.0",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-locals = 20

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
asyncio_mode = "auto"
